Fixed column alignments and colors

--- a/src/Components/Header/style.css
+++ b/src/Components/Header/style.css
@@ -6,7 +6,7 @@ h3{
     padding: 5px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
     border-bottom: 5px dashed gray;
 }
 
