--- a/src/Components/Orderbook/style.css
+++ b/src/Components/Orderbook/style.css
@@ -1,6 +1,6 @@
 .whole-book{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     padding-top: 10px;
     align-items: center;
 }
@@ -8,8 +8,8 @@
 .red-table-container, .green-table-container{
     display: flex;
     flex-direction: column;
-    width: 48%;
-    padding: 0px 10px 0px 10px;
+    width: 50%;
+    padding: 10px 0px 10px 0px;
 }
 
 @media (max-width: 590px) {
